# fastapi-tutorial

./: .gitignore  README.md  requirements.txt
01_hello_world/: main.py
02_request_params/: main.py
03_request_params_validate/: main.py
04_request_validate_i18n/: main.py  tr.py
04_request_validate_i18n/pydantic_i18n/: __init__.py  loaders.py  main.py
04_request_validate_i18n/translations/: zh_CN.json
05_request_cookie_header/: main.py
06_request_form/: main.py
07_request_upload/: main.py
08_exception_handle/: main.py
09_swagger_doc/: main.py  security_main.py
10_response/: main.py
11_static_files/: main.py
12_depends/: main.py
13_oauth2_username_password/: main.py
14_oauth2_jwt/: main.py
15_middleware/: main.py
16_cors/: main.py
17_background_tasks/: asyncio_main.py  main.py
18_jinja2/: main.py
18_jinja2/templates/: hello.html
19_startup_and_shutdown/: main.py
20_websocket/: chat.html  main.py
21_api_router/: main.py  routers.py
22_http_basic_auth/: main.py
23_project_structure/: .env_bak  docker-compose.yml  pyproject.toml
23_project_structure/app/core/: config.py
24_sqlmodel/: main.py
25_loguru/: main.py
25_loguru/logger/: __init__.py  logger.py
26_custom_response_json/: main.py  response_json.py
27_redis_example/: main.py
